@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-06T08:12:29Z",
-  "count_outdated" : 154,
-  "uniques_outdated" : 129,
-  "count" : 167,
-  "uniques" : 141,
+  "timestamp" : "2023-08-08T08:14:06Z",
+  "count_outdated" : 155,
+  "uniques_outdated" : 130,
+  "count" : 168,
+  "uniques" : 142,
   "clones" : [
-    {
-      "timestamp": "2023-07-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-28T00:00:00Z",
       "count": 3,
@@ -88,6 +79,15 @@
     },
     {
       "timestamp": "2023-08-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
