@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2023-07-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-07-28T00:00:00Z",
       "count": 3,
       "uniques": 2
@@ -49,6 +44,11 @@
     },
     {
       "timestamp": "2023-08-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-08T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
